--- a/package.json
+++ b/package.json
@@ -8,18 +8,19 @@
     "test": "node ./node_modules/jasmine/bin/jasmine.js"
   },
   "dependencies": {
-    "express": "~4.2.0",
+    "async": "^3.1.0",
+    "express": "~4.17.1",
     "static-favicon": "~1.0.0",
-    "morgan": "~1.0.0",
-    "cookie-parser": "~1.0.1",
-    "body-parser": "~1.0.0",
-    "debug": "~0.7.4",
+    "morgan": "~1.9.1",
+    "cookie-parser": "^1.4.4",
+    "body-parser": "^1.19.0",
+    "debug": "~2.6.9",
     "jade": "~1.3.0",
     "chaincoin-node-api": "1.0.3",
-    "request": "2.74.0",
+    "request": "^2.88.0",
     "jsonminify": "0.2.3",
-    "mongodb": "2.0.45",
-    "mongoose": "4.1.10",
+    "mongodb": "^3.4.1",
+    "mongoose": "5.7.7",
     "markdown-js": "0.0.3",
     "qr-image": "~2.0.0"
   },
